--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,17 @@
 # SITE CONFIGURATION
-title: Sleek # your site title
+title: 天空之城的个人博客 # your site title
 author: GitHub User # You :P
 description: > # Meta description of Homepage
+  这是一个纯技术博客，博主是个风骚技术男，希望大家共同进步
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/sleek" # the subpath of your site, e.g. /blog
-url: "https://janczizikow.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://wangyunj2020.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO PLUGIN
 social:
-  name: Your Name
+  name: 天空之城
   links:
     - https://twitter.com/BenBalter
     - https://www.facebook.com/ben.balter
@@ -30,7 +31,7 @@ tagline: >
 
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
-email: your-email@domain.com # email for form submission
+email: w1073426253@gmail.com # email for form submission
 
 twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
 github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
