更改博客内容

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 title: 天空之城的个人博客 # your site title
-author: GitHub User # You :P
+author: tiankongzc # You :P
 description: > # Meta description of Homepage
   这是一个纯技术博客，博主是个风骚技术男，希望大家共同进步
   Write an awesome description for your new site here. You can edit this
@@ -27,18 +27,18 @@ navigation: # Navigation links
   - {name: 'Contact', link: '/contact'}
 
 tagline: >
-  Modern Jekyll theme focused on speed performance &amp; SEO best practices
+  天空之城是个大帅哥，技术宅男，技术无敌
 
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
 email: w1073426253@gmail.com # email for form submission
 
-twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
-github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
-instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
+twitter_username:  # replace with your_twitter_username or comment to remove link from footer
+github_username:  wangyunj2020 # replace with your_github_username or comment to remove link from footer
+instagram_username:  # replace with your_instagram_username or comment to remove link from footer
 
 disqus:
-  shortname: janczizikow # to enable comments replace with your_disqus_shortname
+  shortname: wangyunj2020 # to enable comments replace with your_disqus_shortname
 
 # google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
