--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ github_username:  wangyunj2020 # replace with your_github_username or comment to
 instagram_username:  # replace with your_instagram_username or comment to remove link from footer
 
 disqus:
-  shortname: wangyunj2020 # to enable comments replace with your_disqus_shortname
+  shortname:  # to enable comments replace with your_disqus_shortname
 
 # google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
